sys_siglist has gone from glibc (since version 2.32).
Use sigdescr_np instead.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG467f057ad15c gpg: Use sigdescr_np for newer GNU C library. | |||
rGd5f9481186ea common: Fix get_signal_name for GNU/Linux. | |||
rGc4ba712736dd common: Fix get_signal_name for GNU/Linux. |
Related Objects
Related Objects
- Mentioned In
- E884: Weekly Standup